syntax = "proto3";

package foo;

enum Time {
  option allow_alias = true;
  MORNING = 0;
  EVENING = 1;
  NIGHT = 1;
}

message HelloRequest {
  string arg1 = 1;
  string arg2 = 2;
  repeated string arg3 = 3;
  Time time = 4;
}

message HelloResponse {
  string arg1 = 1;
  string arg2 = 2;
  repeated string arg3 = 3;
}

service ProtoGreeter {
  rpc SayHelloProto (HelloRequest) returns (HelloResponse);
  rpc LotsOfRepliesProto (HelloRequest) returns (stream HelloResponse);
  rpc LotsOfGreetingsProto (stream HelloRequest) returns (HelloResponse);
  rpc BidiHelloProto (stream HelloRequest) returns (stream HelloResponse);
}
